--- a/demo.html
+++ b/demo.html
@@ -39,17 +39,19 @@ body::after{
 header{
   position:fixed;
   top:0;
+  left:0;
   width:100%;
+  height:64px;
   z-index:1000;
   display:flex;
-  justify-content:space-between;
   align-items:center;
-  padding:16px 26px;
+  padding:0 26px;
   background:rgba(255,255,255,.04);
   backdrop-filter:blur(16px);
   border-bottom:1px solid rgba(255,255,255,.08);
 }
 
+/* MENU LEFT */
 .nav{
   display:flex;
   gap:28px;
@@ -62,8 +64,12 @@ header{
 }
 .nav a:hover{opacity:1}
 
-/* ===== LANG ===== */
+/* LANG RIGHT */
 .lang{
+  position:absolute;
+  right:18px;
+  top:50%;
+  transform:translateY(-50%);
   display:flex;
   gap:6px;
 }
@@ -87,16 +93,16 @@ header{
 main{
   margin-top:120px;
   padding:40px 20px 100px;
-  max-width:1200px;
+  max-width:1100px;
   margin-left:auto;
   margin-right:auto;
   text-align:center;
 }
 
-/* ===== TITLE ===== */
+/* TITLE */
 h1{
   font-size:clamp(38px,6vw,64px);
-  margin-bottom:18px;
+  margin-bottom:16px;
 }
 .subtitle{
   max-width:760px;
@@ -109,7 +115,7 @@ h1{
 .slider{
   position:relative;
   width:100%;
-  max-width:980px;
+  max-width:960px;
   margin:auto;
   overflow:hidden;
   border-radius:28px;
@@ -119,14 +125,15 @@ h1{
 
 .slides{
   display:flex;
+  width:500%;
   transition:transform .6s cubic-bezier(.16,1,.3,1);
 }
 
 .slide{
-  min-width:100%;
-  padding:26px;
+  width:100%;
+  flex-shrink:0;
+  padding:24px;
   display:flex;
-  align-items:center;
   justify-content:center;
 }
 
@@ -136,7 +143,7 @@ h1{
   box-shadow:0 30px 80px rgba(0,0,0,.85);
 }
 
-/* ===== ARROWS ===== */
+/* ARROWS */
 .arrow{
   position:absolute;
   top:50%;
@@ -144,7 +151,7 @@ h1{
   width:52px;
   height:52px;
   border-radius:50%;
-  background:rgba(255,255,255,.12);
+  background:rgba(255,255,255,.14);
   border:1px solid rgba(255,255,255,.25);
   color:#fff;
   font-size:26px;
@@ -152,13 +159,11 @@ h1{
   display:flex;
   align-items:center;
   justify-content:center;
-  backdrop-filter:blur(10px);
 }
-.arrow:hover{background:rgba(255,255,255,.2)}
-.arrow.left{left:18px}
-.arrow.right{right:18px}
+.arrow.left{left:16px}
+.arrow.right{right:16px}
 
-/* ===== WHATSAPP ===== */
+/* WHATSAPP */
 .whatsapp{
   position:fixed;
   bottom:22px;
@@ -173,13 +178,12 @@ h1{
   font-size:30px;
   color:#fff;
   text-decoration:none;
-  z-index:2000;
 }
 
-/* ===== MOBILE ===== */
+/* MOBILE */
 @media(max-width:768px){
+  .slide{padding:14px}
   .arrow{width:44px;height:44px;font-size:22px}
-  .slide{padding:16px}
 }
 </style>
 </head>
@@ -206,62 +210,62 @@ h1{
   </h1>
 
   <div class="subtitle"
-       data-es="Ejemplos del nivel de diseño y calidad que entregamos en cada proyecto."
-       data-en="Examples of the design level and quality we deliver in every project.">
-    Ejemplos del nivel de diseño y calidad que entregamos en cada proyecto.
+    data-es="Ejemplos reales del nivel de diseño y experiencia que entregamos."
+    data-en="Real examples of the design and experience level we deliver.">
+    Ejemplos reales del nivel de diseño y experiencia que entregamos.
   </div>
 
   <div class="slider">
     <button class="arrow left" onclick="prev()">‹</button>
 
     <div class="slides" id="slides">
-      <div class="slide"><img src="demo1.jpg" alt=""></div>
-      <div class="slide"><img src="demo2.jpg" alt=""></div>
-      <div class="slide"><img src="demo3.jpg" alt=""></div>
-      <div class="slide"><img src="demo4.jpg" alt=""></div>
-      <div class="slide"><img src="demo5.jpg" alt=""></div>
+      <div class="slide"><img src="demo1.jpg"></div>
+      <div class="slide"><img src="demo2.jpg"></div>
+      <div class="slide"><img src="demo3.jpg"></div>
+      <div class="slide"><img src="demo4.jpg"></div>
+      <div class="slide"><img src="demo5.jpg"></div>
     </div>
 
     <button class="arrow right" onclick="next()">›</button>
   </div>
 </main>
 
-<a class="whatsapp" href="https://wa.me/15027942412" target="_blank">💬</a>
+<a class="whatsapp" href="https://wa.me/15027942412">💬</a>
 
 <script>
 /* ===== SLIDER ===== */
-let index=0;
-const slides=document.getElementById("slides");
-const total=5;
+let index = 0;
+const slides = document.getElementById("slides");
+const total = 5;
 
 function update(){
-  slides.style.transform=translateX(-${index*100}%);
+  slides.style.transform = translateX(-${index * 100}%);
 }
 function next(){
-  index=(index+1)%total;
+  index = (index + 1) % total;
   update();
 }
 function prev(){
-  index=(index-1+total)%total;
+  index = (index - 1 + total) % total;
   update();
 }
 
 /* ===== TRANSLATION ===== */
-const esBtn=document.getElementById("esBtn");
-const enBtn=document.getElementById("enBtn");
+const esBtn = document.getElementById("esBtn");
+const enBtn = document.getElementById("enBtn");
 
 function setLang(lang){
   document.querySelectorAll("[data-"+lang+"]").forEach(el=>{
-    el.textContent=el.dataset[lang];
+    el.textContent = el.dataset[lang];
   });
 }
 
-esBtn.onclick=()=>{
+esBtn.onclick = ()=>{
   esBtn.classList.add("active");
   enBtn.classList.remove("active");
   setLang("es");
 };
-enBtn.onclick=()=>{
+enBtn.onclick = ()=>{
   enBtn.classList.add("active");
   esBtn.classList.remove("active");
   setLang("en");
