--- a/demo.html
+++ b/demo.html
@@ -3,27 +3,24 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ZenSite | Demos</title>
+<title>Demos | ZenSite</title>
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
-html{scroll-behavior:smooth}
-
 body{
   font-family:-apple-system,BlinkMacSystemFont,"SF Pro Display","Segoe UI",sans-serif;
   background:#05070c;
   color:#fff;
-  overflow-x:hidden;
 }
 
-/* ===== BACKGROUND ===== */
+/* BACKGROUND */
 body::before{
   content:"";
   position:fixed;
   inset:0;
   background:
-    radial-gradient(circle at 20% 20%,rgba(0,200,255,.15),transparent 40%),
-    radial-gradient(circle at 80% 70%,rgba(140,90,255,.18),transparent 45%),
+    radial-gradient(circle at 20% 20%,rgba(0,200,255,.18),transparent 40%),
+    radial-gradient(circle at 80% 70%,rgba(120,90,255,.2),transparent 45%),
     #05070c;
   z-index:-2;
 }
@@ -35,48 +32,41 @@ body::after{
   z-index:-1;
 }
 
-/* ===== HEADER ===== */
+/* HEADER */
 header{
   position:fixed;
   top:0;
-  left:0;
   width:100%;
-  height:64px;
-  z-index:1000;
   display:flex;
+  justify-content:space-between;
   align-items:center;
-  padding:0 26px;
+  padding:16px 24px;
   background:rgba(255,255,255,.04);
   backdrop-filter:blur(16px);
   border-bottom:1px solid rgba(255,255,255,.08);
+  z-index:1000;
 }
 
-/* MENU LEFT */
-.nav{
+nav{
   display:flex;
-  gap:28px;
+  gap:26px;
 }
-.nav a{
+nav a{
   color:#fff;
   text-decoration:none;
   font-weight:600;
   opacity:.85;
 }
-.nav a:hover{opacity:1}
 
-/* LANG RIGHT */
+/* LANG */
 .lang{
-  position:absolute;
-  right:18px;
-  top:50%;
-  transform:translateY(-50%);
   display:flex;
   gap:6px;
 }
 .lang button{
   padding:4px 10px;
   font-size:11px;
-  border-radius:14px;
+  border-radius:12px;
   border:1px solid rgba(255,255,255,.25);
   background:transparent;
   color:#fff;
@@ -89,101 +79,90 @@ header{
   border-color:#00cfff;
 }
 
-/* ===== MAIN ===== */
+/* MAIN */
 main{
-  margin-top:120px;
-  padding:40px 20px 100px;
+  padding:140px 20px 120px;
   max-width:1100px;
-  margin-left:auto;
-  margin-right:auto;
+  margin:auto;
   text-align:center;
 }
 
-/* TITLE */
+/* TITLES */
 h1{
-  font-size:clamp(38px,6vw,64px);
+  font-size:clamp(42px,6vw,70px);
   margin-bottom:16px;
 }
-.subtitle{
-  max-width:760px;
-  margin:0 auto 60px;
-  font-size:18px;
+p{
+  font-size:clamp(16px,2.4vw,20px);
   opacity:.9;
+  max-width:820px;
+  margin:0 auto 50px;
+  line-height:1.6;
 }
 
-/* ===== SLIDER ===== */
+/* SLIDER */
 .slider{
   position:relative;
-  width:100%;
-  max-width:960px;
-  margin:auto;
   overflow:hidden;
-  border-radius:28px;
-  background:rgba(255,255,255,.05);
-  box-shadow:0 40px 120px rgba(0,0,0,.9);
-}
-
-.slides{
-  display:flex;
-  width:500%;
-  transition:transform .6s cubic-bezier(.16,1,.3,1);
+  border-radius:26px;
 }
 
 .slide{
+  display:none;
+}
+
+.slide.active{
+  display:block;
+}
+
+/* DEMO FRAME (FIX REAL) */
+.demo-frame{
   width:100%;
-  flex-shrink:0;
-  padding:24px;
+  height:520px;
+  background:#000;
+  border-radius:26px;
+  overflow:hidden;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  box-shadow:0 40px 120px rgba(0,0,0,.9);
+}
+
+.demo-frame img{
+  width:100%;
+  height:100%;
+  object-fit:contain;
+}
+
+/* CONTROLS */
+.controls{
+  margin-top:20px;
   display:flex;
   justify-content:center;
+  gap:14px;
 }
-
-.slide img{
-  width:100%;
-  border-radius:22px;
-  box-shadow:0 30px 80px rgba(0,0,0,.85);
-}
-
-/* ARROWS */
-.arrow{
-  position:absolute;
-  top:50%;
-  transform:translateY(-50%);
-  width:52px;
-  height:52px;
+.controls button{
+  width:46px;
+  height:46px;
   border-radius:50%;
-  background:rgba(255,255,255,.14);
-  border:1px solid rgba(255,255,255,.25);
-  color:#fff;
-  font-size:26px;
+  border:none;
+  background:#00cfff;
+  color:#000;
+  font-size:20px;
+  font-weight:700;
   cursor:pointer;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-}
-.arrow.left{left:16px}
-.arrow.right{right:16px}
-
-/* WHATSAPP */
-.whatsapp{
-  position:fixed;
-  bottom:22px;
-  right:22px;
-  width:60px;
-  height:60px;
-  background:#25D366;
-  border-radius:50%;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-size:30px;
-  color:#fff;
-  text-decoration:none;
 }
 
 /* MOBILE */
 @media(max-width:768px){
-  .slide{padding:14px}
-  .arrow{width:44px;height:44px;font-size:22px}
+  .demo-frame{height:320px}
+}
+
+/* FOOTER */
+footer{
+  margin-top:90px;
+  opacity:.5;
+  font-size:13px;
 }
 </style>
 </head>
@@ -191,13 +170,12 @@ h1{
 <body>
 
 <header>
-  <nav class="nav">
+  <nav>
     <a href="index.html" data-es="Inicio" data-en="Home">Inicio</a>
     <a href="demo.html" data-es="Demos" data-en="Demos">Demos</a>
     <a href="planes.html" data-es="Planes" data-en="Plans">Planes</a>
     <a href="nosotros.html" data-es="Nosotros" data-en="About">Nosotros</a>
   </nav>
-
   <div class="lang">
     <button id="esBtn" class="active">ES</button>
     <button id="enBtn">EN</button>
@@ -209,67 +187,64 @@ h1{
     Demostraciones reales
   </h1>
 
-  <div class="subtitle"
-    data-es="Ejemplos reales del nivel de diseño y experiencia que entregamos."
-    data-en="Real examples of the design and experience level we deliver.">
-    Ejemplos reales del nivel de diseño y experiencia que entregamos.
-  </div>
+  <p data-es="Ejemplos reales del nivel de diseño, estructura y experiencia que entregamos."
+     data-en="Real examples of the design, structure and experience level we deliver.">
+    Ejemplos reales del nivel de diseño, estructura y experiencia que entregamos.
+  </p>
 
   <div class="slider">
-    <button class="arrow left" onclick="prev()">‹</button>
-
-    <div class="slides" id="slides">
-      <div class="slide"><img src="demo1.jpg"></div>
-      <div class="slide"><img src="demo2.jpg"></div>
-      <div class="slide"><img src="demo3.jpg"></div>
-      <div class="slide"><img src="demo4.jpg"></div>
-      <div class="slide"><img src="demo5.jpg"></div>
+    <div class="slide active">
+      <div class="demo-frame">
+        <img src="demo1.jpg">
+      </div>
     </div>
-
-    <button class="arrow right" onclick="next()">›</button>
+    <div class="slide">
+      <div class="demo-frame">
+        <img src="demo2.jpg">
+      </div>
+    </div>
+    <div class="slide">
+      <div class="demo-frame">
+        <img src="demo3.jpg">
+      </div>
+    </div>
   </div>
+
+  <div class="controls">
+    <button onclick="prev()">‹</button>
+    <button onclick="next()">›</button>
+  </div>
+
+  <footer>
+    © 2025 ZenSite. Todos los derechos reservados.
+  </footer>
 </main>
 
-<a class="whatsapp" href="https://wa.me/15027942412">💬</a>
-
 <script>
-/* ===== SLIDER ===== */
-let index = 0;
-const slides = document.getElementById("slides");
-const total = 5;
-
-function update(){
-  slides.style.transform = translateX(-${index * 100}%);
+/* SLIDER */
+let index=0;
+const slides=document.querySelectorAll(".slide");
+function show(i){
+  slides.forEach(s=>s.classList.remove("active"));
+  slides[i].classList.add("active");
 }
 function next(){
-  index = (index + 1) % total;
-  update();
+  index=(index+1)%slides.length;
+  show(index);
 }
 function prev(){
-  index = (index - 1 + total) % total;
-  update();
+  index=(index-1+slides.length)%slides.length;
+  show(index);
 }
 
-/* ===== TRANSLATION ===== */
-const esBtn = document.getElementById("esBtn");
-const enBtn = document.getElementById("enBtn");
-
-function setLang(lang){
-  document.querySelectorAll("[data-"+lang+"]").forEach(el=>{
-    el.textContent = el.dataset[lang];
+/* LANG */
+function setLang(l){
+  document.querySelectorAll("[data-"+l+"]").forEach(e=>{
+    e.textContent=e.dataset[l];
   });
 }
-
-esBtn.onclick = ()=>{
-  esBtn.classList.add("active");
-  enBtn.classList.remove("active");
-  setLang("es");
-};
-enBtn.onclick = ()=>{
-  enBtn.classList.add("active");
-  esBtn.classList.remove("active");
-  setLang("en");
-};
+esBtn.onclick=()=>{esBtn.classList.add("active");enBtn.classList.remove("active");setLang("es")};
+enBtn.onclick=()=>{enBtn.classList.add("active");esBtn.classList.remove("active");setLang("en")};
 </script>
 
 </body>
