--- a/demo.html
+++ b/demo.html
@@ -3,14 +3,16 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Demos | ZenSite</title>
+<title>Demo | ZenSite</title>
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
+
 body{
   font-family:-apple-system,BlinkMacSystemFont,"SF Pro Display","Segoe UI",sans-serif;
   background:#05070c;
   color:#fff;
+  overflow-x:hidden;
 }
 
 /* BACKGROUND */
@@ -37,10 +39,11 @@ header{
   position:fixed;
   top:0;
   width:100%;
+  height:64px;
   display:flex;
-  justify-content:space-between;
   align-items:center;
-  padding:16px 24px;
+  justify-content:space-between;
+  padding:0 22px;
   background:rgba(255,255,255,.04);
   backdrop-filter:blur(16px);
   border-bottom:1px solid rgba(255,255,255,.08);
@@ -49,7 +52,7 @@ header{
 
 nav{
   display:flex;
-  gap:26px;
+  gap:24px;
 }
 nav a{
   color:#fff;
@@ -57,15 +60,16 @@ nav a{
   font-weight:600;
   opacity:.85;
 }
+nav a:hover{opacity:1}
 
-/* LANG */
+/* LANG SMALL RIGHT */
 .lang{
   display:flex;
   gap:6px;
 }
 .lang button{
-  padding:4px 10px;
-  font-size:11px;
+  padding:2px 8px;
+  font-size:10px;
   border-radius:12px;
   border:1px solid rgba(255,255,255,.25);
   background:transparent;
@@ -89,45 +93,46 @@ main{
 
 /* TITLES */
 h1{
-  font-size:clamp(42px,6vw,70px);
-  margin-bottom:16px;
+  font-size:clamp(40px,6vw,68px);
+  margin-bottom:14px;
 }
-p{
-  font-size:clamp(16px,2.4vw,20px);
+.subtitle{
+  font-size:clamp(15px,2.3vw,19px);
   opacity:.9;
-  max-width:820px;
-  margin:0 auto 50px;
+  max-width:760px;
+  margin:0 auto 46px;
   line-height:1.6;
 }
 
 /* SLIDER */
 .slider{
   position:relative;
-  overflow:hidden;
-  border-radius:26px;
+  border-radius:28px;
+  background:rgba(255,255,255,.04);
+  padding:18px;
+  box-shadow:
+    0 40px 120px rgba(0,0,0,.85),
+    inset 0 0 0 1px rgba(255,255,255,.06);
 }
 
-.slide{
-  display:none;
-}
-
-.slide.active{
-  display:block;
-}
+/* SLIDES */
+.slide{display:none}
+.slide.active{display:block}
 
 /* DEMO FRAME (FIX REAL) */
 .demo-frame{
   width:100%;
   height:520px;
-  background:#000;
-  border-radius:26px;
+  border-radius:22px;
   overflow:hidden;
+  background:#000;
+  box-shadow:
+    0 30px 90px rgba(0,0,0,.9),
+    0 0 60px rgba(0,200,255,.12);
   display:flex;
   align-items:center;
   justify-content:center;
-  box-shadow:0 40px 120px rgba(0,0,0,.9);
 }
-
 .demo-frame img{
   width:100%;
   height:100%;
@@ -136,7 +141,7 @@ p{
 
 /* CONTROLS */
 .controls{
-  margin-top:20px;
+  margin-top:22px;
   display:flex;
   justify-content:center;
   gap:14px;
@@ -151,6 +156,7 @@ p{
   font-size:20px;
   font-weight:700;
   cursor:pointer;
+  box-shadow:0 10px 30px rgba(0,200,255,.4);
 }
 
 /* MOBILE */
@@ -161,7 +167,7 @@ p{
 /* FOOTER */
 footer{
   margin-top:90px;
-  opacity:.5;
+  opacity:.45;
   font-size:13px;
 }
 </style>
@@ -176,6 +182,7 @@ footer{
     <a href="planes.html" data-es="Planes" data-en="Plans">Planes</a>
     <a href="nosotros.html" data-es="Nosotros" data-en="About">Nosotros</a>
   </nav>
+
   <div class="lang">
     <button id="esBtn" class="active">ES</button>
     <button id="enBtn">EN</button>
@@ -183,31 +190,23 @@ footer{
 </header>
 
 <main>
-  <h1 data-es="Demostraciones reales" data-en="Real demonstrations">
-    Demostraciones reales
-  </h1>
+  <h1 data-es="Demo ZenSite" data-en="ZenSite Demo">Demo ZenSite</h1>
 
-  <p data-es="Ejemplos reales del nivel de diseño, estructura y experiencia que entregamos."
-     data-en="Real examples of the design, structure and experience level we deliver.">
-    Ejemplos reales del nivel de diseño, estructura y experiencia que entregamos.
-  </p>
+  <div class="subtitle"
+    data-es="Diseño real que transmite confianza desde el primer segundo. Así se ven las experiencias que convierten visitas en clientes."
+    data-en="Real design that builds trust from the first second. This is what experiences that convert visitors into clients look like.">
+    Diseño real que transmite confianza desde el primer segundo. Así se ven las experiencias que convierten visitas en clientes.
+  </div>
 
   <div class="slider">
-    <div class="slide active">
-      <div class="demo-frame">
-        <img src="demo1.jpg">
-      </div>
-    </div>
-    <div class="slide">
-      <div class="demo-frame">
-        <img src="demo2.jpg">
-      </div>
-    </div>
-    <div class="slide">
-      <div class="demo-frame">
-        <img src="demo3.jpg">
-      </div>
-    </div>
+
+    <div class="slide active"><div class="demo-frame"><img src="demo1.jpg"></div></div>
+    <div class="slide"><div class="demo-frame"><img src="demo2.jpg"></div></div>
+    <div class="slide"><div class="demo-frame"><img src="demo3.jpg"></div></div>
+    <div class="slide"><div class="demo-frame"><img src="demo4.jpg"></div></div>
+    <div class="slide"><div class="demo-frame"><img src="demo5.jpg"></div></div>
+    <div class="slide"><div class="demo-frame"><img src="demo6.jpg"></div></div>
+
   </div>
 
   <div class="controls">
@@ -221,26 +220,60 @@ footer{
 </main>
 
 <script>
-/* SLIDER */
-let index=0;
-const slides=document.querySelectorAll(".slide");
+let index = 0;
+const slides = document.querySelectorAll(".slide");
+let autoSlide;
+
+/* SHOW */
 function show(i){
   slides.forEach(s=>s.classList.remove("active"));
   slides[i].classList.add("active");
 }
+
+/* NEXT / PREV */
 function next(){
-  index=(index+1)%slides.length;
+  index = (index + 1) % slides.length;
   show(index);
+  resetAuto();
 }
 function prev(){
-  index=(index-1+slides.length)%slides.length;
+  index = (index - 1 + slides.length) % slides.length;
   show(index);
+  resetAuto();
 }
+
+/* AUTO SLIDE */
+function startAuto(){
+  autoSlide = setInterval(()=>{
+    index = (index + 1) % slides.length;
+    show(index);
+  }, 5000);
+}
+function resetAuto(){
+  clearInterval(autoSlide);
+  startAuto();
+}
+startAuto();
+
+/* SWIPE MOBILE */
+let startX = 0;
+const slider = document.querySelector(".slider");
+
+slider.addEventListener("touchstart", e=>{
+  startX = e.touches[0].clientX;
+},{passive:true});
+
+slider.addEventListener("touchend", e=>{
+  let endX = e.changedTouches[0].clientX;
+  let diff = startX - endX;
+  if(diff > 50) next();
+  if(diff < -50) prev();
+});
 
 /* LANG */
 function setLang(l){
   document.querySelectorAll("[data-"+l+"]").forEach(e=>{
-    e.textContent=e.dataset[l];
+    e.textContent = e.dataset[l];
   });
 }
 esBtn.onclick=()=>{esBtn.classList.add("active");enBtn.classList.remove("active");setLang("es")};
