--- a/planes.html
+++ b/planes.html
@@ -3,23 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Planes | ZenSite</title>
-
-<!-- ===== GOOGLE ANALYTICS (REEMPLAZA G-XXXXXXX) ===== -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXX"></script>
-<script>
-window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
-gtag('config', 'G-XXXXXXX');
-</script>
+<title>ZenSite | Planes</title>
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
-html{scroll-behavior:smooth}
-
 body{
-  font-family:-apple-system,BlinkMacSystemFont,"SF Pro Display","Inter","Segoe UI",sans-serif;
+  font-family:-apple-system,BlinkMacSystemFont,"SF Pro Display","SF Pro Text","Segoe UI",sans-serif;
   background:#05070c;
   color:#fff;
 }
@@ -30,8 +19,8 @@ body::before{
   position:fixed;
   inset:0;
   background:
-    radial-gradient(circle at 20% 20%,rgba(0,200,255,.18),transparent 40%),
-    radial-gradient(circle at 80% 70%,rgba(120,90,255,.22),transparent 45%),
+    radial-gradient(circle at 15% 20%,rgba(0,200,255,.16),transparent 40%),
+    radial-gradient(circle at 85% 75%,rgba(120,90,255,.18),transparent 45%),
     #05070c;
   z-index:-2;
 }
@@ -39,17 +28,19 @@ body::after{
   content:"";
   position:fixed;
   inset:0;
-  backdrop-filter:blur(90px);
+  backdrop-filter:blur(80px);
   z-index:-1;
 }
 
 /* HEADER */
 header{
   position:fixed;
-  top:0;left:0;
+  top:0;
   width:100%;
   z-index:1000;
-  padding:18px 26px;
+  display:flex;
+  align-items:center;
+  padding:16px 26px;
   background:rgba(255,255,255,.04);
   backdrop-filter:blur(16px);
   border-bottom:1px solid rgba(255,255,255,.08);
@@ -64,23 +55,20 @@ header{
   font-weight:600;
   opacity:.85;
 }
-
-/* LANG */
 .lang{
-  position:fixed;
-  top:18px;
-  right:18px;
+  margin-left:auto;
   display:flex;
   gap:6px;
 }
 .lang button{
-  padding:4px 9px;
-  font-size:11px;
+  padding:4px 10px;
+  font-size:10px;
+  letter-spacing:.12em;
   border-radius:14px;
   border:1px solid rgba(255,255,255,.25);
   background:transparent;
   color:#fff;
-  font-weight:700;
+  font-weight:800;
   cursor:pointer;
 }
 .lang .active{
@@ -90,148 +78,118 @@ header{
 
 /* MAIN */
 main{
-  margin-top:150px;
-  padding:0 20px 140px;
+  margin-top:130px;
+  padding:40px 20px 120px;
   max-width:1200px;
-  margin-inline:auto;
+  margin:auto;
+  text-align:center;
 }
 
 /* TITLE */
 h1{
-  text-align:center;
-  font-size:clamp(40px,6vw,72px);
+  font-size:clamp(46px,6vw,84px);
   margin-bottom:16px;
+  font-weight:900;
+  letter-spacing:-0.05em;
 }
 .subtitle{
-  text-align:center;
-  max-width:900px;
-  margin:0 auto 60px;
-  font-size:clamp(17px,2.4vw,22px);
-  opacity:.92;
-  line-height:1.6;
+  font-size:20px;
+  opacity:.9;
+  max-width:760px;
+  margin:0 auto 80px;
 }
 
-/* PLANS GRID */
+/* PLANS */
 .plans{
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
-  gap:36px;
+  gap:32px;
 }
 
 /* CARD */
 .plan{
   position:relative;
-  padding:36px 32px 40px;
-  border-radius:32px;
-  background:linear-gradient(160deg,rgba(255,255,255,.06),rgba(255,255,255,.02));
-  box-shadow:0 40px 140px rgba(0,0,0,.85);
+  background:rgba(255,255,255,.06);
+  border-radius:28px;
+  padding:36px 30px 42px;
+  backdrop-filter:blur(18px);
+  box-shadow:0 30px 90px rgba(0,0,0,.7);
+  transition:.35s ease;
 }
-.plan h2{
-  font-size:28px;
-  margin-bottom:8px;
-}
-.price{
-  font-size:52px;
-  font-weight:900;
-  color:#00cfff;
-  margin-bottom:18px;
-}
-.plan p{
-  font-size:16px;
-  opacity:.92;
-  margin-bottom:22px;
-  line-height:1.55;
-}
-.features{
-  display:flex;
-  flex-direction:column;
-  gap:10px;
-  margin-bottom:30px;
-}
-.features span::before{
-  content:"✓ ";
-  color:#00cfff;
-  font-weight:900;
+.plan:hover{
+  transform:translateY(-10px);
+  box-shadow:0 50px 120px rgba(0,0,0,.9);
 }
 
-/* CTA */
-.cta{
-  width:100%;
-  padding:15px;
-  border:none;
-  border-radius:18px;
-  font-size:16px;
-  font-weight:900;
-  background:#00cfff;
-  color:#000;
-  cursor:pointer;
-}
-
-/* MOST SOLD */
-.most{
-  border:2px solid rgba(0,200,255,.45);
-  box-shadow:0 80px 240px rgba(0,200,255,.3);
+/* FEATURED */
+.plan.featured{
+  outline:2px solid #00cfff;
+  background:linear-gradient(180deg,rgba(0,200,255,.14),rgba(255,255,255,.06));
 }
 .badge{
   position:absolute;
-  top:-16px;
+  top:-14px;
   left:50%;
   transform:translateX(-50%);
   background:#00cfff;
   color:#000;
-  padding:7px 18px;
-  border-radius:16px;
   font-size:11px;
   font-weight:900;
-  letter-spacing:.8px;
+  padding:6px 14px;
+  border-radius:20px;
+  letter-spacing:.08em;
 }
 
-/* PREMIUM */
-.premium{
-  background:linear-gradient(160deg,rgba(120,90,255,.22),rgba(0,0,0,.45));
+/* PLAN TEXT */
+.plan h2{
+  font-size:26px;
+  margin-bottom:10px;
+}
+.price{
+  font-size:44px;
+  font-weight:900;
+  margin:18px 0;
+}
+.price span{
+  font-size:16px;
+  opacity:.7;
+}
+
+/* LIST */
+ul{
+  list-style:none;
+  text-align:left;
+  margin:28px 0 36px;
+}
+ul li{
+  margin-bottom:14px;
+  font-size:16px;
+  opacity:.92;
+}
+ul li::before{
+  content:"✔";
+  color:#00cfff;
+  margin-right:10px;
+}
+
+/* CTA */
+.plan a{
+  display:inline-block;
+  padding:14px 26px;
+  border-radius:26px;
+  background:#00cfff;
+  color:#000;
+  font-weight:800;
+  text-decoration:none;
+  letter-spacing:.03em;
 }
 
 /* FOOTER */
 footer{
-  text-align:center;
-  padding:50px 20px 30px;
+  margin-top:110px;
+  font-size:12px;
   opacity:.55;
-  font-size:13px;
-}
-
-/* POPUP */
-.popup{
-  position:fixed;
-  inset:0;
-  background:rgba(0,0,0,.65);
-  display:none;
-  align-items:center;
-  justify-content:center;
-  z-index:3000;
-}
-.popup-box{
-  background:#0b0f1a;
-  border-radius:28px;
-  padding:36px 32px;
-  max-width:380px;
-  text-align:center;
-}
-.popup-box h3{
-  font-size:22px;
-  margin-bottom:12px;
-}
-.popup-box p{
-  font-size:16px;
-  margin-bottom:22px;
-}
-.popup-box button{
-  padding:14px 22px;
-  border:none;
-  border-radius:18px;
-  background:#00cfff;
-  color:#000;
-  font-weight:900;
-  cursor:pointer;
+  letter-spacing:.08em;
 }
 </style>
 </head>
@@ -245,123 +203,79 @@ footer{
     <a href="planes.html" data-es="Planes" data-en="Plans">Planes</a>
     <a href="nosotros.html" data-es="Nosotros" data-en="About">Nosotros</a>
   </nav>
+  <div class="lang">
+    <button id="esBtn" class="active">ES</button>
+    <button id="enBtn">EN</button>
+  </div>
 </header>
-
-<div class="lang">
-  <button id="esBtn" class="active">ES</button>
-  <button id="enBtn">EN</button>
-</div>
 
 <main>
   <h1 data-es="Planes ZenSite" data-en="ZenSite Plans">Planes ZenSite</h1>
-
   <p class="subtitle"
-     data-es="No vendemos páginas. Creamos sistemas digitales que generan confianza, posicionan tu marca y convierten visitas en clientes."
-     data-en="We don’t sell websites. We build digital systems that create trust, position your brand and turn visits into clients.">
+     data-es="No vendemos páginas. Construimos presencia digital seria que genera confianza y clientes."
+     data-en="We don’t sell websites. We build serious digital presence that creates trust and converts.">
+     No vendemos páginas. Construimos presencia digital seria que genera confianza y clientes.
   </p>
 
   <section class="plans">
 
-    <!-- PLAN Z -->
+    <!-- Z -->
     <div class="plan">
-      <h2>Plan Z</h2>
-      <div class="price">$200</div>
-      <p data-es="Para negocios que necesitan verse profesionales y confiables desde el primer contacto."
-         data-en="For businesses that need to look professional and trustworthy from the first contact.">
-      </p>
-      <div class="features">
-        <span data-es="Landing enfocada en conversión" data-en="Conversion-focused landing page"></span>
-        <span data-es="Diseño premium personalizado" data-en="Custom premium design"></span>
-        <span data-es="Optimización total para móviles" data-en="Fully mobile optimized"></span>
-        <span data-es="Contacto directo por WhatsApp" data-en="Direct WhatsApp contact"></span>
-      </div>
-      <button class="cta" onclick="contact('Plan Z - $200')">Contactar</button>
+      <h2>Z</h2>
+      <div class="price">$200 <span>USD</span></div>
+      <ul>
+        <li data-es="Landing page profesional" data-en="Professional landing page"></li>
+        <li data-es="Diseño responsive (móvil y desktop)" data-en="Responsive design (mobile & desktop)"></li>
+        <li data-es="Carga rápida y optimizada" data-en="Fast & optimized loading"></li>
+        <li data-es="Imagen seria para tu negocio" data-en="Serious business image"></li>
+      </ul>
+      <a href="https://wa.me/15027942412?text=Hola,%20quiero%20el%20Plan%20Z%20de%20$200">Contactar</a>
     </div>
 
-    <!-- PLAN Z+ -->
-    <div class="plan most">
-      <div class="badge" data-es="Más Vendido" data-en="Best Value"></div>
-      <h2>Plan Z+</h2>
-      <div class="price">$480</div>
-      <p data-es="El equilibrio perfecto entre imagen, estructura y crecimiento. El plan que más contratan."
-         data-en="The perfect balance between image, structure and growth. Our most chosen plan.">
-      </p>
-      <div class="features">
-        <span data-es="Web multi-sección completa" data-en="Full multi-section website"></span>
-        <span data-es="Animaciones tipo app premium" data-en="Premium app-style animations"></span>
-        <span data-es="Arquitectura profesional escalable" data-en="Scalable professional architecture"></span>
-        <span data-es="Base optimizada para SEO" data-en="SEO-ready foundation"></span>
-      </div>
-      <button class="cta" onclick="contact('Plan Z+ - $480')">Contactar</button>
+    <!-- Z+ -->
+    <div class="plan featured">
+      <div class="badge">MÁS VENDIDO</div>
+      <h2>Z+</h2>
+      <div class="price">$480 <span>USD</span></div>
+      <ul>
+        <li data-es="Web completa multipágina" data-en="Complete multi-page website"></li>
+        <li data-es="Diseño premium personalizado" data-en="Custom premium design"></li>
+        <li data-es="Optimización SEO básica" data-en="Basic SEO optimization"></li>
+        <li data-es="Mayor confianza y conversión" data-en="Higher trust & conversion"></li>
+      </ul>
+      <a href="https://wa.me/15027942412?text=Hola,%20quiero%20el%20Plan%20Z+%20de%20$480">Contactar</a>
     </div>
 
-    <!-- PLAN PREMIUM -->
-    <div class="plan premium">
+    <!-- Z PREMIUM -->
+    <div class="plan">
       <h2>Z Premium</h2>
-      <div class="price">$720</div>
-      <p data-es="Solución completa para vender online. Ideal para tiendas, marcas y proyectos que quieren escalar."
-         data-en="Complete solution to sell online. Ideal for stores, brands and scalable projects.">
-      </p>
-      <div class="features">
-        <span data-es="Tienda online profesional" data-en="Professional online store"></span>
-        <span data-es="Carrito de compras avanzado" data-en="Advanced shopping cart"></span>
-        <span data-es="Gestión de inventario" data-en="Inventory management"></span>
-        <span data-es="Sistema listo para escalar" data-en="Ready-to-scale system"></span>
-      </div>
-      <button class="cta" onclick="contact('Z Premium - $720')">Contactar</button>
+      <div class="price">$720 <span>USD</span></div>
+      <ul>
+        <li data-es="Tienda online completa" data-en="Full e-commerce store"></li>
+        <li data-es="Carrito, inventario y productos" data-en="Cart, inventory & products"></li>
+        <li data-es="Estructura para escalar ventas" data-en="Sales-ready scalable structure"></li>
+        <li data-es="Marca digital de alto nivel" data-en="High-end digital brand"></li>
+      </ul>
+      <a href="https://wa.me/15027942412?text=Hola,%20quiero%20el%20Plan%20Z%20Premium%20de%20$720">Contactar</a>
     </div>
 
   </section>
+
+  <footer>© 2025 ZENSITE · ALL RIGHTS RESERVED</footer>
 </main>
 
-<footer>
-  © 2025 ZenSite. Todos los derechos reservados.
-</footer>
-
-<!-- POPUP -->
-<div class="popup" id="popup">
-  <div class="popup-box">
-    <h3>🎁 15% OFF</h3>
-    <p data-es="Plan Z+ es el más contratado este mes."
-       data-en="Plan Z+ is the most chosen this month.">
-    </p>
-    <button onclick="goWhatsapp()">Hablar por WhatsApp</button>
-  </div>
-</div>
-
 <script>
-/* TRANSLATION */
 const esBtn=document.getElementById("esBtn");
 const enBtn=document.getElementById("enBtn");
+
 function setLang(lang){
   document.querySelectorAll("[data-"+lang+"]").forEach(el=>{
     el.textContent = el.dataset[lang];
   });
 }
-esBtn.onclick=()=>{esBtn.classList.add("active");enBtn.classList.remove("active");setLang("es");};
-enBtn.onclick=()=>{enBtn.classList.add("active");esBtn.classList.remove("active");setLang("en");};
 
-/* CONTACT */
-function contact(plan){
-  gtag('event','plan_click',{plan:plan});
-  window.open(
-    "https://wa.me/15027942412?text="+
-    encodeURIComponent("Hola, quiero información sobre "+plan),
-    "_blank"
-  );
-}
-
-/* POPUP */
-if(!localStorage.getItem("popupSeen")){
-  setTimeout(()=>{
-    document.getElementById("popup").style.display="flex";
-    localStorage.setItem("popupSeen","yes");
-  },9000);
-}
-function goWhatsapp(){
-  gtag('event','popup_whatsapp');
-  window.open("https://wa.me/15027942412","_blank");
-}
+esBtn.onclick=()=>{esBtn.classList.add("active");enBtn.classList.remove("active");setLang("es");}
+enBtn.onclick=()=>{enBtn.classList.add("active");esBtn.classList.remove("active");setLang("en");}
 </script>
 
 </body>
